# rbe-capstone

./: .dockerignore  .gitignore  README.md  build_image.sh  docker-compose.yml  piggyback_container  requirements.txt  run_image_unix  run_image_wsl2  start_vnc.sh
Report/: FinalReport.tex  FinalReport_DRAFT.tex  ProposalReport  ProposalReport.tex
capstone_ros_layer/: .vimrc  Dockerfile  build_cscope_ws.sh  build_ros_layer.sh  cyclonedds.xml  ros_entrypoint.sh
capstone_workspace/: placeholder.txt
doc/: episode_runner_state_machine.md  potr-design.md  rl_pipeline_docs.md  rl_training.md
docker/: rbe_capstone.dockerfile  ros_entrypoint.sh
mac_specific/: start_vnc.sh
rbe_capstone/potr_navigation/: CMakeLists.txt  package.xml
rbe_capstone/potr_navigation/config/: dwb_params.yaml  mppi_params.yaml  nav2_params.yaml  shared_params.yaml
rbe_capstone/potr_navigation/launch/: nav2_bringup.launch.py
rbe_capstone/potr_navigation/msg/: EpisodeMetrics.msg  StepMetrics.msg
rbe_capstone/potr_navigation/scripts/: PLANNER_AND_EPISODE_RUNNER.md  episode_runner.py  metrics_tracker.py  param_dial_viz.py  planner_controller.py
rbe_capstone/potr_navigation/srv/: GetMetrics.srv  SetParamPreset.srv  SetRawParams.srv  SwitchPlanner.srv
rbe_capstone/potr_rl/: TRAINING_PIPELINE.md  collect_baselines.py  eval.py  package.xml  setup.py  train.py
rbe_capstone/potr_rl/potr_rl/: callbacks.py  env.py  params.py
rbe_capstone/rl_pipeline/: CMakeLists.txt  demo.sh  package.xml  setup.cfg  setup.py
rbe_capstone/rl_pipeline/launch/: eval.launch.py  simulation_bringup.launch.py  train.launch.py
rbe_capstone/rl_pipeline/rl_logs/: eval_results_10000_steps.json  eval_results_10000_steps_200eps_seed27.json  eval_results_10000_steps_round2.json  eval_results_10000_steps_round3.json  eval_results_2000_steps.json  eval_results_final.json  old_eval_results_10000_steps.json  old_monitor.csv
rbe_capstone/rl_pipeline/rl_logs/PPO_10/: events.out.tfevents.1776916378.rbe-capstone-env.798344.0
rbe_capstone/rl_pipeline/rl_logs/PPO_11/: events.out.tfevents.1776960625.rbe-capstone-env.1379499.0
rbe_capstone/rl_pipeline/rl_pipeline/: pipeline_utils.py  planner_config_manager.py  rl_backbone.py
rbe_capstone/rl_pipeline/rl_results/: eval_analysis.py  eval_analysis_output.txt  eval_results_10000_steps_200eps_seed27_with_length_run1.json  eval_results_10000_steps_200eps_seed27_with_length_run2.json  eval_results_10000_steps_200eps_seed27_with_length_run3.json  eval_results_10000_steps_200eps_seed27_with_length_run4.json  evaluate_baseline_log_run3.txt  evaluate_baseline_log_run4.txt  evaluate_model_log_run3.txt  evaluate_model_log_run4.txt  monitor.csv
rbe_capstone/rl_pipeline/scripts/: pipeline_utils.py  planner_config_manager.py  rl_backbone.py
rbe_capstone/simulation_launch/: CMakeLists.txt  goal_manager_dbg.txt  package.xml
rbe_capstone/simulation_launch/action/: SendGoalToNav2.action
rbe_capstone/simulation_launch/config/: goalpoints.yaml  goalpoints_episode.yaml  goalpoints_episode_1.yaml  goalpoints_episode_2.yaml  nav2_dwb_params.yaml
rbe_capstone/simulation_launch/launch/: move_robot.launch.py  potr_robot.launch.py  view_robot.launch.py
rbe_capstone/simulation_launch/maps/corridors/: corridors.pgm  corridors.yaml
rbe_capstone/simulation_launch/maps/dense_clutter/: dense_clutter.pgm  dense_clutter.yaml
rbe_capstone/simulation_launch/maps/mixed/: mixed.pgm  mixed.yaml
rbe_capstone/simulation_launch/maps/narrow_aisles/: narrow_aisles.pgm  narrow_aisles.yaml
rbe_capstone/simulation_launch/maps/open_cluttered/: open_cluttered.pgm  open_cluttered.yaml
rbe_capstone/simulation_launch/maps/wide_aisles/: wide_aisles.pgm  wide_aisles.yaml
rbe_capstone/simulation_launch/rviz/: mac_is_a_pain_in_the_ass.rviz  tb4_eval_demo.rviz  tb4_no_lasers.rviz  tb4_with_lasers.rviz  turtlebot4.rviz
rbe_capstone/simulation_launch/scripts/: diff_drive_model.py  goal_manager.py  lidar_model.py  nav2_goal_client.py  sim_clock.py
rbe_capstone/simulation_setup/: placeholder.txt
wsl_entrypoint/: docker-compose-wsl-no-gpu.yml  docker-compose-wsl.yml  piggyback_container.sh  run_image_wsl.sh
